syntax = "proto3";

// 命 令 号: 2528
// 命令名称: intelligent_dev_redirect_switch_set
// 命令描述: 重定向信息开关
// 文件名称: d2c2528_intelligent_dev_redirect_switch_set.proto

// 以下是 Android 生成对应 Java 所需信息
option java_package = "com.ubtedu.deviceconnect.libs.ukit.smart.protobuffer";
option java_outer_classname = "PbIntelligentDevRedirectSwitchSet";

message IntelligentDevRedirectSwitchSetRequest {
  // ATTR: REQUSET
  uint32 status = 1; //开关
  uint32 com_type = 2;
}

message IntelligentDevRedirectSwitchSetResponse {
}
